Chapter 8, 9, 10, Pagination, internationalization, Inmemory Data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@
 spring.thymeleaf.template-resolver-order=0
 spring.thymeleaf.cache=false
 spring.web.resources.chain.strategy.content.enabled=true
+spring.messages.basename=i18n/messages
 spring.web.resources.chain.strategy.content.paths=/**
+spring.data.web.pageable.default-page-size=10
